inception-of-things/p2/confs/apps_kubeconfigs/app2_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  selector:
    matchLabels:
      app: app-two
  replicas: 3
  template:
    metadata:
      labels:
        app: app-two
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume-app2
          mountPath: /usr/share/nginx/html # mounted as simple volume, other files will be not seen, inside the container, default setting for nginx: root /usr/share/nginx/html
      volumes:
      - name: html-volume-app2
        configMap:
          name: app-two
