inception-of-things/p2/confs/apps_kubeconfigs/app1_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector:
    app: app-one
  ports:
    - protocol: TCP
      port: 80
