inception-of-things/p2/confs/apps_kubeconfigs/app2_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector:
    app: app-two
  ports:
    - protocol: TCP
      port: 80
