inception-of-things/p2/confs/apps_kubeconfigs/app3_service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-three
spec:
  selector:
    app: app-three
  ports:
    - protocol: TCP
      port: 80
